fixed spacing around building blocks

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,9 @@
 }
 
 figure {
+
+    margin-inline-start: 20px;
+    margin-inline-end: 20px;
     margin: 0;
     padding: 10px;
 }
@@ -61,7 +64,7 @@ a {
 }
 
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 868px) {
 
   .flex-container {
     flex-direction: column;
